@@ -107,6 +107,7 @@ FLOAT_SETT_GETSET("PhasePlateShift", mWinApp->mProcessImage->, PlatePhase)
 FLOAT_SETT_GETSET("ImageReductionFac", mWinApp->mProcessImage->, ReductionFactor)
 FLOAT_SETT_GETSET("FixedRingDefocus", mWinApp->mProcessImage->, FixedRingDefocus)
 FLOAT_SETT_GETSET("UserMaxCtfFitRes", mWinApp->mProcessImage->, UserMaxCtfFitRes)
+FLOAT_SETT_GETSET("MinCtfFitResIfPhase", mWinApp->mProcessImage->, MinCtfFitResIfPhase)
 BOOL_SETT_GETSET("AutosaveSettings", mWinApp->mDocWnd->, AutoSaveSettings)
 BOOL_SETT_GETSET("AutosaveNavNew", mWinApp->mDocWnd->, AutoSaveNav)
 BOOL_SETT_GETSET("SkipFileDlg", mWinApp->mDocWnd->, SkipFileDlg)
