@@ -282,7 +282,7 @@
             when a point is clicked in an FFT, and providing parameters for CTF fitting.&nbsp; See
             <a href="menu_process.htm#hid_process_fft">FFT command help</a> for details.&nbsp; 
             For with 1, 2, or 3 values: the spherical aberration in mm, the number of 
-            circles to draw, and the amplitude contrast ratio (defaults 2, 5, and 0.07).</TD>
+            circles to draw, and the amplitude contrast ratio (defaults 2.5, 5, and 0.07).</TD>
           <TD>&nbsp;</TD>
         </TR>
         <TR VALIGN="top">
