@@ -3,6 +3,11 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+8/24/18: Added ability to set limit on minimum resolution for CTF fitting when
+there is a non-zero phase.
+
+8/24/18: Changed default spherical aberration from 2 to 2.5.
+
 8/21/18: Fixed setting of hardware binning for DE camera.
 
 8/21/18: Added script command to save navigator file.
